<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="msg_formatter" formatted="false">This button will launch my %s app</string>

    <string name="popular_movies">Popular movies</string>
    <string name="stock_hawk">Stock hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="make_your_app_material">Make your app material</string>
    <string name="go_ubiquitous">Go ubiquitous</string>
    <string name="capstone">Capstone</string>

    <string name="button_id_error">Button id error</string>
</resources>
